backend/users/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-users-deployment
  labels:
    app: golang-users
spec:
  replicas: 3
  selector:
    matchLabels:
      app: golang-users
  template:
    metadata:
      labels:
        app: golang-users
    spec:
      containers:
      - name: golang-users
        image: golang-users:dev
        ports:
        - containerPort: 8080
