backend/users/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-users-service
spec:
  selector:
    app: golang-users
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
